# relanotes_rs

./: .gitignore  Cargo.toml  README.md
migrations/2019-11-13-192615_create_node_types/: down.sql  up.sql
migrations/2019-11-14-162542_adding_groups_tables/: down.sql  up.sql
migrations/2019-11-15-054039_adding_nodes/: down.sql  up.sql
migrations/2019-11-24-100456_groups/: down.sql  up.sql
migrations/2019-11-24-100543_subgroups/: down.sql  up.sql
migrations/2019-11-24-100853_node_types/: down.sql  up.sql
migrations/2019-11-24-101028_nodes/: down.sql  up.sql
src/: README.txt  abstracts.rs  groups_representation.rs  lib.rs  main.rs  models.rs  nodes_representation.rs  schema.rs
src/database_setup/: mod.rs
src/groups_mod/: mod.rs
src/groups_mod/subgroups_mod/: mod.rs
src/groups_mod/subgroups_mod/nodes_mod/: mod.rs  validation_errors.rs
