[package]
name = "relanotes_rs"
version = "0.1.0"
authors = ["KoStard <rub099999720@gmail.com>"]
edition = "2018"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"