[package]
name = "relanotes_rs"
version = "0.1.0"
authors = ["KoStard <rub099999720@gmail.com>"]
edition = "2018"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.9.0"
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", optional = true, features = ["bundled"] }
diesel = { version = "1.4.3", features = ["sqlite"] }
# slotmap = "0.4"
